<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/alpha_name"
            style="@style/login_header_tx"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/header_bg"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                >
                <LinearLayout
                    android:id="@+id/mainLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:weightSum="2">
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/grey"
                        android:layout_marginLeft="@dimen/_2sdp"/>
                    <TextView
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:gravity="bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        android:text="@string/signup"
                        android:textColor="@color/header_bg"
                        android:layout_marginRight="@dimen/_10sdp"/>
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:background="@color/grey"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/topless_border"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:id="@+id/alertLayout"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:visibility="gone"

                        >

                        <TextView
                            android:id="@+id/alertTx"
                            style="@style/red_tx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/error_login" />


                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/first_name"
                        style="@style/input_header_grey_tx"
                        />

                    <EditText
                        android:id="@+id/et_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/input_field_tx"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                         />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/last_name"
                        style="@style/input_header_grey_tx"

                        />

                    <EditText
                        android:id="@+id/et_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/input_field_tx"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/uname"
                        style="@style/input_header_grey_tx"

                        />

                    <EditText
                        android:id="@+id/et_uname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/input_field_tx"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/email"
                        style="@style/input_header_grey_tx"

                        />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/input_field_tx"
                        android:imeOptions="actionNext"
                        android:inputType="textWebEmailAddress"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/reemail"
                        style="@style/input_header_grey_tx"
                        />

                    <EditText
                        android:id="@+id/et_reemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/input_field_tx"
                        android:imeOptions="actionNext"
                        android:inputType="textWebEmailAddress"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/pwd"
                        style="@style/input_header_grey_tx"
                        />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/input_field_tx"
                        android:imeOptions="actionNext"
                        android:inputType="textWebPassword"
                        android:maxLength="15"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/confirm_pwd"
                        style="@style/input_header_grey_tx"
                        />

                    <EditText
                        android:id="@+id/et_confirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        style="@style/input_field_tx"
                        android:imeOptions="actionDone"
                        android:inputType="textWebPassword"
                        android:maxLength="15"
                        />


                </LinearLayout>





            </RelativeLayout>
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:background="@color/black"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:gravity="center"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"

                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"

                    >

                    <!--Proceed button-->

                    <Button
                        android:id="@+id/proceedBtn"
                        style="@style/red_bg_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/proceed" />




                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>