<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"


        >
                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:background="@color/black"
                    android:orientation="vertical"
                    android:gravity="center"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"

                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="vertical"

                        >

                        <!--Proceed button-->

                        <Button
                            android:id="@+id/proceedBtn"
                            style="@style/red_bg_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/proceed" />




                    </LinearLayout>
                </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_above="@id/footer"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/topless_border"

                    >




                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/email"
                        style="@style/input_header_tx"

                        />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/input_field_tx"
                        android:imeOptions="actionNext"
                        android:inputType="textWebEmailAddress"
                        android:hint="@string/email_hint"
                        />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/pwd"
                        style="@style/input_header_tx"
                        />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/input_field_tx"
                        android:imeOptions="actionNext"
                        android:inputType="textWebPassword"
                        android:hint="@string/pwd_hint"
                        android:maxLength="15"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/confirm_pwd"
                        style="@style/input_header_tx"
                        />

                    <EditText
                        android:id="@+id/et_confirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        style="@style/input_field_tx"
                        android:imeOptions="actionDone"
                        android:inputType="textWebPassword"
                        android:hint="@string/confirm_pwd"
                        android:maxLength="15"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:id="@+id/alertLayout"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:visibility="visible"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"

                        >

                        <TextView
                            android:id="@+id/alertTx"
                            style="@style/red_tx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/use_acc"
                            android:textColor="@color/header_bg"
                            />


                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/mainLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:gravity="center"

                    android:layout_alignParentTop="true"


                    >

                    <TextView

                        android:gravity="bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        android:text="@string/acc_cred"
                        android:textColor="@color/header_bg"
                        android:background="@color/back_cl"
                        android:paddingLeft="@dimen/_8sdp"
                        android:paddingRight="@dimen/_8sdp"

                        />

                </LinearLayout>


            </RelativeLayout>
            <!--<LinearLayout-->
                <!--android:id="@+id/linearLayout"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/_80sdp"-->
                <!--android:background="@color/black"-->
                <!--android:orientation="vertical"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:gravity="center"-->

                <!--&gt;-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="@dimen/_20sdp"-->
                    <!--android:layout_marginRight="@dimen/_20sdp"-->

                    <!--android:gravity="center"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:orientation="vertical"-->

                    <!--&gt;-->

                    <!--&lt;!&ndash;Proceed button&ndash;&gt;-->

                    <!--<Button-->
                        <!--android:id="@+id/proceedBtn"-->
                        <!--style="@style/red_bg_button"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:gravity="center"-->
                        <!--android:text="@string/proceed" />-->




                <!--</LinearLayout>-->
            <!--</LinearLayout>-->
        </LinearLayout>
    </ScrollView>
</RelativeLayout>