<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical"
        android:background="@drawable/edittext_rounded_corner"
        android:padding="@dimen/_5sdp"


        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"


        >
        <TextView
            android:id="@+id/tv_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_toRightOf="@+id/tv_accountNumber"
            android:padding="@dimen/_2sdp"
            android:text="@string/card"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"


            />

            <TextView
                android:id="@+id/tv_cardno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:padding="@dimen/_2sdp"
                android:text="***** **** ***8764"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14sdp"

                />
    </LinearLayout>
        <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
            android:weightSum="1"

      >
            <TextView
                android:id="@+id/tv_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_toRightOf="@+id/tv_accountNumber"
                android:padding="@dimen/_2sdp"
                android:text="@string/exp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"


                />

            <TextView
                android:id="@+id/tv_expiryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_toRightOf="@+id/tv_accountNumber"
                android:padding="@dimen/_2sdp"
                android:text="10/20"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14sdp"
                android:layout_weight="1"

                />




        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toRightOf="@+id/tv_accountNumber"
            android:padding="@dimen/_2sdp"
            android:text="@string/delete"
            android:textColor="@color/header_bg"
            android:textSize="@dimen/_14sdp"
            android:layout_weight="0"
            android:gravity="right"
            android:layout_gravity="right"

            />
            </LinearLayout>
    </LinearLayout>
</RelativeLayout>